--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "personalwebsite",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://tmcnally551.github.io/react-resume",
+  "homepage": "https://tmcnally551.github.io/personalwebsite",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -11,7 +11,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "save-dev": "0.0.1-security"
   },
   "scripts": {
     "start": "react-scripts start",
